force-app/main/default/objects/Animal_Quantity__c/Animal_Quantity__c.object-meta.xml
<CustomObject>
    <label>Animal Quantity</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Animal Quantity #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Quantity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>