force-app/main/default/objects/Animal_Quantity__c/fields/Animal_Type__c.field-meta.xml
<CustomField>
    <fullName>Animal_Type__c</fullName>
    <label>Animal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birds</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Cows</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Equine</fullName>
            </value>
            <value>
                <fullName>Exotics</fullName>
            </value>
            <value>
                <fullName>Fowl</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Livestock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>