force-app/main/default/objects/Animal_Quantity__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Animal Quantity</relationshipLabel>
    <relationshipName>Animal_Quantity</relationshipName>
    <type>Lookup</type>
</CustomField>