force-app/main/default/objects/Animal_Quantity__c/fields/Field_Status__c.field-meta.xml
<CustomField>
    <fullName>Field_Status__c</fullName>
    <label>Field Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_Animal_Status</valueSetName>
    </valueSet>
</CustomField>