force-app/main/default/objects/Animal_Quantity__c/fields/Manual_Address__c.field-meta.xml
<CustomField>
    <fullName>Manual_Address__c</fullName>
    <label>Manual Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>