force-app/main/default/objects/Animal_Quantity__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <formula>IF (NOT(ISBLANK(Photo_ID__c)),IMAGE(Photo_ID__c, &apos;Image&apos;, 200, 200),&quot;No Image Is Captured&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo</label>
    <type>Text</type>
</CustomField>