force-app/main/default/objects/Animal_Quantity__c/fields/Photo_ID__c.field-meta.xml
<CustomField>
    <fullName>Photo_ID__c</fullName>
    <label>Photo ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>