force-app/main/default/objects/Animal_Quantity__c/fields/Species_Breed__c.field-meta.xml
<CustomField>
    <fullName>Species_Breed__c</fullName>
    <label>Species/Breed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>